--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Afflaherty.GitHub.io</title>
+    <title>Adam Flaherty's Portfolio</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/afflaherty">View on GitHub</a>
 
-          <h1 id="project_title">Afflaherty.GitHub.io</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">Adam Flaherty's Portfolio</h1>
+          <h2 id="A Showcase of Work by Adam Flaherty"></h2>
 
         </header>
     </div>
