--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/afflaherty">View on GitHub</a>
 
           <h1 id="project_title">Adam Flaherty's Portfolio</h1>
-          <h2 id="A Showcase of Work by Adam Flaherty"></h2>
+          <h2 id="project_tagline">A Showcase of Work by Adam Flaherty</h2>
 
         </header>
     </div>
