--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     </div>
 
     <!-- MAIN CONTENT -->
+    <nav>
+      <ul>
+        <li><a href="#">Programming</a></li>
+        <li><a href="#">HTML</a></li>
+        <li><a href="#">Analysis</a></li>
+      </ul>
+    </nav>
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
