--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <nav>
+    <center><nav>
       <ul>
         <li><a href="#">Programming</a></li>
         <li><a href="#">HTML</a></li>
         <li><a href="#">Analysis</a></li>
       </ul>
-    </nav>
+    </nav></center>
+    
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
