--- a/program.html
+++ b/program.html
@@ -40,7 +40,7 @@
 
 <h3>RPG</h3>
 
-<p align="center"><img src="rpg_create.png" width=100px><img src="rpg_open" width=100px><img src="rpg_battle" width=100px></p>
+<p align="center"><img src="images/rpg_create.png" width=100px><img src="images/rpg_open" width=100px><img src="images/rpg_battle" width=100px></p>
 
 <p>My final project for my Advanced Java Programming class.  I was asked to incorporate multiple topics learned throughout the course.  For this assignment, I used a UI, interface classes, and action listeners to build the game.</p>
 
