--- a/program.html
+++ b/program.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/afflaherty">View on GitHub</a>
+          <!--<a id="forkme_banner" href="https://github.com/afflaherty">View on GitHub</a>-->
 
           <h1 id="project_title">Adam Flaherty's Portfolio</h1>
           <h2 id="project_tagline">A Project Showcase by Adam Flaherty</h2>
@@ -27,7 +27,7 @@
     <!-- MAIN CONTENT -->
     <nav>
       <ul>
-        <li><a href="#">Programming</a></li>
+        <li><a href="program.html">Programming</a></li>
         <li><a href="#">HTML</a></li>
         <li><a href="#">Analysis</a></li>
       </ul>
