--- a/program.html
+++ b/program.html
@@ -40,7 +40,9 @@
 
 <h3>RPG</h3>
 
-<p align="center"><img src="images/rpg_create.PNG" width=250px><img src="images/rpg_open.PNG" width=250px><img src="images/rpg_battle.PNG" width=300px></p>
+<p align="center"><img src="images/rpg_create.PNG" width=213px>
+<img src="images/rpg_open.PNG" width=250px>
+<img src="images/rpg_battle.PNG" width=314px></p>
 
 <p>My final project for my Advanced Java Programming class.  I was asked to incorporate multiple topics learned throughout the course.  For this assignment, I used a UI, interface classes, and action listeners to build the game.</p>
 
