--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- MAIN CONTENT -->
     <nav>
       <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="program.html">Programming</a></li>
         <li><a href="#">HTML</a></li>
         <li><a href="#">Analysis</a></li>
