--- a/web.html
+++ b/web.html
@@ -44,7 +44,7 @@
 <p>The final project for my Advanced Web Page Publishing class.  I was asked to create at lease five HTML pages using HTML, CSS, and some Bootstrap mechanics.  I used a Carosel</p>
 
 <div class="lightbox-target">
-  <img src="images/site_home.PNG" width=225px>
+  <img src="images/site_home.PNG">
   <a class="lightbox-close" href="#"></a>
 </div>
 
