--- a/web.html
+++ b/web.html
@@ -49,7 +49,7 @@
 </div>-->
 
 <a class="lightbox" href="#">
-  <img src="images/site_home.PNG">
+  <img src="images/site_home.PNG" width=250px>
 </a>
 
       </section>
