--- a/web.html
+++ b/web.html
@@ -43,14 +43,7 @@
 
 <p>The final project for my Advanced Web Page Publishing class.  I was asked to create at lease five HTML pages using HTML, CSS, and some Bootstrap mechanics.  I used a Carosel</p>
 
-<!--<div class="lightbox-target">
-  <img src="images/site_home.PNG"/>
-  <a class="lightbox-close" href="#"></a>
-</div>-->
-
-<a class="lightbox" href="#">
-  <img src="images/site_home.PNG" width=250px>
-</a>
+<p><img src="images/site_home.PNG" width=250px></p>
 
       </section>
     </div>
