--- a/web.html
+++ b/web.html
@@ -43,7 +43,7 @@
 
 <p>The final project for my Advanced Web Page Publishing class.  I was asked to create at lease five HTML pages using HTML, CSS, and some Bootstrap mechanics.  I used a Carosel</p>
 
-<p><img src="images/site_home.PNG" width=250px></p>
+<p align="center"><img src="images/site_home.PNG" width=250px></p>
 
       </section>
     </div>
