--- a/web.html
+++ b/web.html
@@ -41,7 +41,7 @@
 
 <h3>Ewe-nique Website</h3>
 
-<p>The final project for my Advanced Web Page Publishing class.  I was asked to create at lease five HTML pages using HTML, CSS, and some Bootstrap mechanics.  I used a Carosel</p>
+<p>The final project for my Advanced Web Page Publishing class.  I was asked to create at lease five HTML pages using HTML, CSS, and some Bootstrap mechanics.  I used a Carousel to showcase some of the products for the business on the homepage.</p>
 
 <p align="center"><img src="images/site_home.PNG" width=325px></p>
 
