--- a/program.html
+++ b/program.html
@@ -30,7 +30,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="program.html">Programming</a></li>
         <li><a href="web.html">HTML</a></li>
-        <li><a href="#">Analysis</a></li>
+        <li><a href="analysis.html">Analysis</a></li>
       </ul>
     </nav>
     
