--- a/analysis.html
+++ b/analysis.html
@@ -43,6 +43,7 @@
 
 <p>My graduate project was analysis of poetry.  I used Mathematica and R code to perform the analysis on a text which separated parts of speech.</p>
 
+<p>Example of Mathematica code</p>
 <code>adjective = StringSplit[ToString[Import[
 "\Users\owner\Documents\MATLAB\MASTERS\Parts of Speech\adjective.txt"]], \
 {Whitespace}];</code>
@@ -50,6 +51,18 @@
 <code>AdjectiveList =
 Flatten[Table[Intersection[{stringlist[[i]]}, adjective], {i, Length[stringlist]}]]
 Length[AdjectiveList]</code>
+
+<p>Example of R code</p>
+<code>rawd=read.csv(file='C:/Users/owner/Documents/MATLAB/MASTERS/RData.csv')
+d=rawd[,-11]
+cor(d)
+eigen(cor(d))
+plot(eigen(cor(d))$values)
+factanal(d, factors=2)</code>
+
+<code>tmp1=numeric(30)
+for(i in 1:30){
+tmp1[i]=sum(d[i,]*matrix(loadings(m)[,1],ncol=1))}</code>
 
       </section>
     </div>
