--- a/analysis.html
+++ b/analysis.html
@@ -53,11 +53,11 @@ Flatten[Table[Intersection[{stringlist[[i]]}, adjective], {i, Length[stringlist]
 Length[AdjectiveList]</code>
 
 <p>Example of R code</p>
-<code>rawd=read.csv(file='C:/Users/owner/Documents/MATLAB/MASTERS/RData.csv')
-d=rawd[,-11]
-cor(d)
-eigen(cor(d))
-plot(eigen(cor(d))$values)
+<code>rawd=read.csv(file='C:/Users/owner/Documents/MATLAB/MASTERS/RData.csv')<br>
+d=rawd[,-11]<br>
+cor(d)<br>
+eigen(cor(d))<br>
+plot(eigen(cor(d))$values)<br>
 factanal(d, factors=2)</code>
 <br>
 <code>tmp1=numeric(30)
