--- a/analysis.html
+++ b/analysis.html
@@ -53,12 +53,12 @@ Flatten[Table[Intersection[{stringlist[[i]]}, adjective], {i, Length[stringlist]
 Length[AdjectiveList]</code>
 
 <p>Example of R code</p>
-<code>rawd=read.csv(file='C:/Users/owner/Documents/MATLAB/MASTERS/RData.csv')<br>
-d=rawd[,-11]<br>
-cor(d)<br>
-eigen(cor(d))<br>
-plot(eigen(cor(d))$values)<br>
-factanal(d, factors=2)</code>
+<code>rawd=read.csv(file='C:/Users/owner/Documents/MATLAB/MASTERS/RData.csv')</code><br>
+<code>d=rawd[,-11]</code><br>
+<code>cor(d)</code><br>
+<code>eigen(cor(d))</code><br>
+<code>plot(eigen(cor(d))$values)</code><br>
+<code>factanal(d, factors=2)</code>
 <br>
 <code>tmp1=numeric(30)
 for(i in 1:30){
