--- a/analysis.html
+++ b/analysis.html
@@ -64,6 +64,8 @@ Length[AdjectiveList]</code>
 for(i in 1:30){
 tmp1[i]=sum(d[i,]*matrix(loadings(m)[,1],ncol=1))}</code>
 
+<p>Download the whole file to read: <a href="masters_writeup.pdf" download="flaherty_poetic_variation">Poetic Variation</a></p>
+
       </section>
     </div>
 
