--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h3>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Me</h3>
 
-<p>I am a graduate of Western Carolina University with a M.S. in Applied Mathematics.  After having to code in MatLab, Mathematica, and R in my graduate classes, I gained an interest in learning more robust programming languages.  To do this, I recently went back to school to obtain my Associate's degree in computer programming at Trident Technical College.  I found the logical similarities between math and computer science made it easy to pick up the core skills of programming as I learned Java, C#, HTML and CSS, PHP, and JavaScript.</p>
+<p>I am a graduate of Western Carolina University with a M.S. in Applied Mathematics.  After coding in MatLab, Mathematica, and R in my graduate classes, I gained an interest in learning more robust programming languages.  To do this, I recently went back to school to obtain my Associate's degree in computer programming at Trident Technical College.  I found the logical similarities between math and computer science made it easy to pick up the core skills of programming as I learned Java, C#, SQL, HTML and CSS, PHP, and JavaScript.</p>
 
 <p>Please use the links above to view samples of some of my work.</p>
 
