--- a/master_project.html
+++ b/master_project.html
@@ -58,8 +58,8 @@ factanal(d, factors=2)
 tmp1=numeric(30)
 for(i in 1:30){
 tmp1[i]=sum(d[i,]*matrix(loadings(m)[,1],ncol=1))}</code></pre>
-      <h3>Download</h3>
-      <p>Download the whole file to read: <a download="files/masters_writeup.pdf">Poetic Variation</a></p>
+      <h3>View Full Paper</h3>
+      <p>View the full file to read: <a href="files/masters_writeup.pdf" target="_blank">Poetic Variation</a></p>
     </section>
   </div>
   <!-- FOOTER  -->
