--- a/java_program.html
+++ b/java_program.html
@@ -40,7 +40,7 @@
   <div id="main_content_wrap" class="outer">
     <section id="main_content" class="inner">
       <h2>Eternal Quest - A Java Project</h2>
-      <p>Made as a final project for a Java-based class, Eternal Quest utilizes several topics covered in the course. Such topics include a user interface, interface classes, and action listeners. To play the game, you can download <a download="files/Eternal_Quest.zip">Eternal Quest</a>.</p>
+      <p>Made as a final project for a Java-based class, Eternal Quest utilizes several topics covered in the course. Such topics include a user interface, interface classes, and action listeners. To play the game, you can download <a href="files/Eternal_Quest.zip" download>Eternal Quest</a>.</p>
       <details>
         <summary class="collapseButton">Java Code for Character Creation UI</summary>
         <div class="collapseContent"><pre><code>import java.awt.*;
